--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
 </head>
 
 <body>
-
+  <img id="vr-icon" src="images/vr-icon.png" height="50px"
+    style="
+      position: fixed;
+      bottom: 30px;
+      right: 50px;
+      display: none;
+  "/>
 </body>
 
 
@@ -50,8 +56,10 @@
 <!-- Scripts
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <script src="js/lib/three.min.js"></script>
-<!-- script src="js/vr/PhoneVR.js"></script -->
-<script src="js/vr/VRControls.js"></script>
+<script src="js/HypMath.js"></script>
+<script src="js/vr/PhoneVR.js"></script>
+<script src="js/vr/VRControlsHyperbolic.js"></script>
+<!-- script src="js/vr/VRControls.js"></script-->
 <script src="js/vr/VREffect.js"></script>
 <script src="js/HyperSpace.js" id="mainCode"></script>
 </html>
