Still trying on moving

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 <script type="x-shader/x-vertex" id="vertexShader">
   void main()
   {
-      vec4 modelViewPosition = modelViewMatrix * vec4(position, 1.0);
-      gl_Position = projectionMatrix * modelViewPosition;
+      vec4 p = vec4(position.xyz, 1.0);
+      gl_Position = projectionMatrix * modelViewMatrix * p;
   }
 </script>
 
