Gutted a lot, Implemented VERY basic Raymarch

--- a/A-Frame/index.html
+++ b/A-Frame/index.html
@@ -13,6 +13,7 @@
                 radius="0.5"
                 position="0 1.5 -2">
       </a-sphere>
+      <a-box material="shader:grid-glitch; screenResolution"
       <a-box color="#CCC" width="3" depth="3" height="0.1" position="0 0 -2"></a-box>
     </a-scene>
   </body>
