--- a/Aframe/index.html
+++ b/Aframe/index.html
@@ -5,16 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://aframe.io/releases/0.5.0/aframe.min.js"></script>
-    <script src="custom.js"></script>
+    <script src="raymarch.js"></script>
+    <script src="RenderTexture.js"></script>
   </head>
   <body>
     <a-scene>
-      <a-sphere material="shader:grid-glitch; color: blue;"
-                radius="0.5"
-                position="0 1.5 -2">
-      </a-sphere>
-      <a-box material="shader:grid-glitch; screenResolution"
-      <a-box color="#CCC" width="3" depth="3" height="0.1" position="0 0 -2"></a-box>
+      <a-entity rendertexture></a-entity>
     </a-scene>
   </body>
 </html>
