--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
   const float EPSILON = 0.0001;
 
   uniform vec2 screenResolution;
+  uniform vec3 cameraOrigin;
+  uniform float fov;
 
   //Helps with full screen shaders
   //From //https://github.com/hughsk/glsl-square-frame
@@ -85,12 +87,48 @@
     return getRay(camMat, screenPos, lensLength);
   }
 
+
+
+  //Raymarch functions http://iquilezles.org/www/articles/distfunctions/distfunctions.htm
+
+  float unionSDF(float d1, float d2){
+    return min(d1, d2);
+  }
+
+  float differenceSDF(float d1, float d2){
+    return max(-d1, d2);
+  }
+
+  //Raymarch primitives http://iquilezles.org/www/articles/distfunctions/distfunctions.htm
+
   float sphereSDF(vec3 samplePoint){
     return length(samplePoint) - 1.0;
   }
 
+  float boxSDF(vec3 samplePoint, vec3 size){
+    vec3 distance = abs(samplePoint) - size;
+    return min(max(distance.x, max(distance.y,distance.z)), 0.0) + length(max(distance,0.0));
+  }
+
+  //custom primitives
+
+  float hollowCubeSDF(vec3 samplePoint, float outerSize, float innerSize){
+    vec3 oS = vec3(outerSize, outerSize, outerSize);
+    vec3 iS = vec3(innerSize, innerSize, innerSize);
+    float oB = boxSDF(samplePoint, oS);
+    float iBX = boxSDF(samplePoint, vec3(oS.x*2.0, iS.y, iS.z));
+    float iBY = boxSDF(samplePoint, vec3(iS.x, oS.y*2.0, iS.z));
+    float iBZ = boxSDF(samplePoint, vec3(iS.x, iS.y, oS.z*2.0));
+    float iB = unionSDF(iBX, iBY);
+    iB = unionSDF(iB, iBZ);
+    return differenceSDF(iB, oB);
+  }
+
+  //This is essentially our raymarch scene-graph
+
   float sceneSDF(vec3 samplePoint){
-    return sphereSDF(samplePoint);
+    float final = hollowCubeSDF(samplePoint, 3.0, 2.75);
+    return final;
   }
 
   float shortestDistanceToSurface(vec3 rO, vec3 rD, float start, float end){
@@ -110,12 +148,13 @@
 
   void main(){
     vec2 uv = gl_FragCoord.xy/screenResolution;
-    float cameraAngle = 0.0;
+    float cameraAngle = 5.0;
     float cameraRadius = 20.0;
 
     vec2 screenPosition = squareFrame(screenResolution);
     float lensLength = 2.5;
-    vec3 rayOrigin = vec3(cameraRadius*sin(cameraAngle), 0.0, cameraRadius*cos(cameraAngle));
+    //vec3 rayOrigin = vec3(cameraRadius*sin(cameraAngle), 0.0, cameraRadius*cos(cameraAngle));
+    vec3 rayOrigin = cameraOrigin;
     vec3 rayTarget = vec3(0,0,0);
     vec3 rayDirection = getRay(rayOrigin, rayTarget, screenPosition, lensLength);
 
