--- a/index.html
+++ b/index.html
@@ -55,8 +55,56 @@
   uniform vec3 cameraOrigin;
   uniform float fov;
 
+  vec4 projectToHyperboloid(vec4 v) {
+    float scaleFactor = sqrt(v.w * v.w - v.x * v.x - v.y * v.y - v.z * v.z);
+
+    vec4 result;
+    result.x = v.x / scaleFactor;
+    result.y = v.y / scaleFactor;
+    result.z = v.z / scaleFactor;
+    result.w = v.w / scaleFactor;
+    return result;
+  }
+
+  //Quaternion Math functions
+  //-------------------------------------------------------
+    float innerProduct(vec4 q1, vec4 q2){
+      return q1.x*q2.x+q1.y*q2.y+q1.z*q2.z+q1.z*q2.z+q1.w*q2.w;
+    }
+    float quatDistance(vec4 q1, vec4 q2){
+      float iP = innerProduct(q1,q2);
+      return acos(2.0*iP*iP - 1.0);
+    }
+  //-------------------------------------------------------
+
+  //Hyperbolic Math functions
+  //-------------------------------------------------------
+  float cosh(float rads){
+    float eX = exp(rads);
+    return (0.5 * (eX + 1.0/eX));
+  }
+
+  float sinh(float rads){
+    float eX = exp(rads);
+    return (0.5 * (eX - 1.0/eX));
+  }
+
+  float lorentzDot(vec4 u, vec4 v){
+  	return u.x*v.x + u.y*v.y + u.z*v.z - u.w*v.w;
+  }
+
+  float hypNorm(vec4 v){
+  	return sqrt(abs(lorentzDot(v,v)));
+  }
+
+  vec4 vFromVPrime(vec4 u, vec4 vPrime){
+    vec4 v = vPrime - lorentzDot(u,vPrime)*u;
+    return (1.0/hypNorm(v)*v);
+  }
+  //-------------------------------------------------------
+
   //Helps with full screen shaders
-  //From //https://github.com/hughsk/glsl-square-frame
+  //From https://github.com/hughsk/glsl-square-frame
   vec2 squareFrame(vec2 screenSize) {
     vec2 position = 2.0 * (gl_FragCoord.xy / screenSize.xy) - 1.0;
     position.x *= screenSize.x / screenSize.y;
@@ -69,28 +117,16 @@
     return position;
   }
 
-  //https://github.com/stackgl/glsl-look-at/blob/gh-pages/index.glsl
-  mat3 calcLookAtMatrix(vec3 origin, vec3 target, float roll) {
-    vec3 rr = vec3(sin(roll), cos(roll), 0.0);
-    vec3 ww = normalize(target - origin);
-    vec3 uu = normalize(cross(ww, rr));
-    vec3 vv = normalize(cross(uu, ww));
-    return mat3(uu, vv, ww);
+  //Based on http://jamie-wong.com/2016/07/15/ray-marching-signed-distance-functions/
+  vec4 getRay(float fov, vec2 resolution, vec2 fragCoord){
+    vec2 xy = fragCoord - resolution / 2.0;
+    float z = resolution.y/tan(radians(fov)/2.0);
+    vec4 p = projectToHyperboloid(vec4(vec3(xy,-z),1.0));
+    return normalize(p);
   }
-
-  //https://github.com/stackgl/glsl-camera-ray
-  vec3 getRay(mat3 camMat, vec2 screenPos, float lensLength) {
-    return normalize(camMat * vec3(screenPos, lensLength));
-  }
-  vec3 getRay(vec3 origin, vec3 target, vec2 screenPos, float lensLength) {
-    mat3 camMat = calcLookAtMatrix(origin, target, 0.0);
-    return getRay(camMat, screenPos, lensLength);
-  }
-
-
 
   //Raymarch functions http://iquilezles.org/www/articles/distfunctions/distfunctions.htm
-
+  //-------------------------------------------------------
   float unionSDF(float d1, float d2){
     return min(d1, d2);
   }
@@ -101,7 +137,7 @@
 
   //Raymarch primitives http://iquilezles.org/www/articles/distfunctions/distfunctions.htm
 
-  float sphereSDF(vec3 samplePoint){
+  /*float sphereSDF(vec3 samplePoint){
     return length(samplePoint) - 1.0;
   }
 
@@ -129,9 +165,19 @@
   float sceneSDF(vec3 samplePoint){
     float final = hollowCubeSDF(samplePoint, 3.0, 2.75);
     return final;
+  }*/
+
+  float sphereHSDF(vec4 samplePoint){
+    return hypNorm(samplePoint) - 1.0;
   }
 
-  float shortestDistanceToSurface(vec3 rO, vec3 rD, float start, float end){
+  float sceneHSDF(vec4 samplePoint){
+    float final = sphereHSDF(samplePoint);
+    return final;
+  }
+  //-------------------------------------------------------
+
+  /*float shortestDistanceToSurface(vec3 rO, vec3 rD, float start, float end){
     float depth = start;
     for(int i = 0; i< MAX_MARCHING_STEPS; i++){
       float dist = sceneSDF(rO+depth*rD);
@@ -144,21 +190,31 @@
       }
     }
     return end;
+  }*/
+
+  float shortestDistanceToSurface(vec4 rO, vec4 rD, float start, float end){
+    float depth = start; //depth is in radians
+    for(int i = 0; i< MAX_MARCHING_STEPS; i++){
+      vec4 samplePoint = rO*cosh(depth)+rD*sinh(depth);
+      float dist = sceneHSDF(samplePoint);
+      if(dist < EPSILON){
+        return depth;
+      }
+      depth += dist;
+      if(depth >= end){
+        return end;
+      }
+    }
+    return end;
   }
 
   void main(){
-    vec2 uv = gl_FragCoord.xy/screenResolution;
-    float cameraAngle = 5.0;
-    float cameraRadius = 20.0;
-
     vec2 screenPosition = squareFrame(screenResolution);
-    float lensLength = 2.5;
-    //vec3 rayOrigin = vec3(cameraRadius*sin(cameraAngle), 0.0, cameraRadius*cos(cameraAngle));
-    vec3 rayOrigin = cameraOrigin;
-    vec3 rayTarget = vec3(0,0,0);
-    vec3 rayDirection = getRay(rayOrigin, rayTarget, screenPosition, lensLength);
+    vec4 rayOrigin = projectToHyperboloid(vec4(cameraOrigin.xyz,1.0));
+    vec4 rayDirVPrime = getRay(fov, screenPosition.xy, gl_FragCoord.xy);
+    vec4 rayDirV = vFromVPrime(rayOrigin, rayDirVPrime);
 
-    float dist = shortestDistanceToSurface(rayOrigin, rayDirection, MIN_DIST, MAX_DIST);
+    float dist = shortestDistanceToSurface(rayOrigin, rayDirV, MIN_DIST, MAX_DIST);
     if(dist > MAX_DIST - EPSILON){
       //Didn't hit anything
       gl_FragColor = vec4(0.1,0.1,0.1,1.0);
@@ -172,4 +228,5 @@
 –––––––––––––––––––––––––––––––––––––––––––––––––– -->
 <script src="js/lib/three.min.js"></script>
 <script src="js/HyperSpace.js" id="mainCode"></script>
+<!--script src="js/HypMath.js"></script-->
 </html>
