--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <script type="x-shader/x-fragment" id="fragmentShader">
   const int MAX_MARCHING_STEPS = 255;
   const float MIN_DIST = 0.0;
-  const float MAX_DIST = 100.0;
+  const float MAX_DIST = 25.0;
   const float EPSILON = 0.0001;
 
   uniform vec2 screenResolution;
@@ -87,6 +87,12 @@
     return getRay(camMat, screenPos, lensLength);
   }
 
+  /*From http://jamie-wong.com/2016/07/15/ray-marching-signed-distance-functions/
+  vec3 getRay(float fov, vec2 resolution, vec2 fragCoord){
+    vec2 xy = fragCoord - resolution/2.0;
+    float z = resolution.y/tan(radians(fov)/2.0);
+    return normalize(vec3(xy,-z));
+  }*/
 
 
   //Raymarch functions http://iquilezles.org/www/articles/distfunctions/distfunctions.htm
@@ -147,9 +153,9 @@
   }
 
   void main(){
-    vec2 uv = gl_FragCoord.xy/screenResolution;
-    float cameraAngle = 5.0;
-    float cameraRadius = 20.0;
+    //vec2 uv = gl_FragCoord.xy/screenResolution;
+    //float cameraAngle = 5.0;
+    //float cameraRadius = 20.0;
 
     vec2 screenPosition = squareFrame(screenResolution);
     float lensLength = 2.5;
@@ -157,14 +163,15 @@
     vec3 rayOrigin = cameraOrigin;
     vec3 rayTarget = vec3(0,0,0);
     vec3 rayDirection = getRay(rayOrigin, rayTarget, screenPosition, lensLength);
-
+    //vec3 rayDirection = getRay(60.0, screenPosition, gl_FragCoord.xy);
     float dist = shortestDistanceToSurface(rayOrigin, rayDirection, MIN_DIST, MAX_DIST);
     if(dist > MAX_DIST - EPSILON){
       //Didn't hit anything
       gl_FragColor = vec4(0.1,0.1,0.1,1.0);
       return;
     }
-    gl_FragColor = vec4(0.35,0.1,0.35,1.0);
+    float depthColor = 1.0-dist/MAX_DIST;
+    gl_FragColor = vec4(depthColor,depthColor,depthColor,1.0);
   }
 </script>
 
