--- a/index.html
+++ b/index.html
@@ -55,44 +55,12 @@
   uniform vec3 cameraOrigin;
   uniform float fov;
 
-  //Helps with full screen shaders
-  //From //https://github.com/hughsk/glsl-square-frame
-  vec2 squareFrame(vec2 screenSize) {
-    vec2 position = 2.0 * (gl_FragCoord.xy / screenSize.xy) - 1.0;
-    position.x *= screenSize.x / screenSize.y;
-    return position;
-  }
-
-  vec2 squareFrame(vec2 screenSize, vec2 coord) {
-    vec2 position = 2.0 * (coord.xy / screenSize.xy) - 1.0;
-    position.x *= screenSize.x / screenSize.y;
-    return position;
-  }
-
-  //https://github.com/stackgl/glsl-look-at/blob/gh-pages/index.glsl
-  mat3 calcLookAtMatrix(vec3 origin, vec3 target, float roll) {
-    vec3 rr = vec3(sin(roll), cos(roll), 0.0);
-    vec3 ww = normalize(target - origin);
-    vec3 uu = normalize(cross(ww, rr));
-    vec3 vv = normalize(cross(uu, ww));
-    return mat3(uu, vv, ww);
-  }
-
-  //https://github.com/stackgl/glsl-camera-ray
-  vec3 getRay(mat3 camMat, vec2 screenPos, float lensLength) {
-    return normalize(camMat * vec3(screenPos, lensLength));
-  }
-  vec3 getRay(vec3 origin, vec3 target, vec2 screenPos, float lensLength) {
-    mat3 camMat = calcLookAtMatrix(origin, target, 0.0);
-    return getRay(camMat, screenPos, lensLength);
-  }
-
-  /*From http://jamie-wong.com/2016/07/15/ray-marching-signed-distance-functions/
+  //From http://jamie-wong.com/2016/07/15/ray-marching-signed-distance-functions/
   vec3 getRay(float fov, vec2 resolution, vec2 fragCoord){
     vec2 xy = fragCoord - resolution/2.0;
     float z = resolution.y/tan(radians(fov)/2.0);
     return normalize(vec3(xy,-z));
-  }*/
+  }
 
 
   //Raymarch functions http://iquilezles.org/www/articles/distfunctions/distfunctions.htm
@@ -107,8 +75,8 @@
 
   //Raymarch primitives http://iquilezles.org/www/articles/distfunctions/distfunctions.htm
 
-  float sphereSDF(vec3 samplePoint){
-    return length(samplePoint) - 1.0;
+  float sphereSDF(vec3 samplePoint, float size){
+    return length(samplePoint) - size;
   }
 
   float boxSDF(vec3 samplePoint, vec3 size){
@@ -134,6 +102,7 @@
 
   float sceneSDF(vec3 samplePoint){
     float final = hollowCubeSDF(samplePoint, 3.0, 2.75);
+    final = unionSDF(final, sphereSDF(samplePoint, 1.0));
     return final;
   }
 
@@ -153,23 +122,16 @@
   }
 
   void main(){
-    //vec2 uv = gl_FragCoord.xy/screenResolution;
-    //float cameraAngle = 5.0;
-    //float cameraRadius = 20.0;
-
-    vec2 screenPosition = squareFrame(screenResolution);
-    float lensLength = 2.5;
-    //vec3 rayOrigin = vec3(cameraRadius*sin(cameraAngle), 0.0, cameraRadius*cos(cameraAngle));
     vec3 rayOrigin = cameraOrigin;
-    vec3 rayTarget = vec3(0,0,0);
-    vec3 rayDirection = getRay(rayOrigin, rayTarget, screenPosition, lensLength);
-    //vec3 rayDirection = getRay(60.0, screenPosition, gl_FragCoord.xy);
+    vec3 rayDirection = getRay(fov, screenResolution, gl_FragCoord.xy);
     float dist = shortestDistanceToSurface(rayOrigin, rayDirection, MIN_DIST, MAX_DIST);
+
     if(dist > MAX_DIST - EPSILON){
       //Didn't hit anything
-      gl_FragColor = vec4(0.1,0.1,0.1,1.0);
+      gl_FragColor = vec4(rayDirection.x, rayDirection.y, rayDirection.z, 1.0);
       return;
     }
+
     float depthColor = 1.0-dist/MAX_DIST;
     gl_FragColor = vec4(depthColor,depthColor,depthColor,1.0);
   }
