--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
   const float MIN_DIST = 0.0;
   const float MAX_DIST = 100.0;
   const float EPSILON = 0.0001;
-  const float TILE_SIZE = 0.1;
+  const float TILE_SIZE = 0.2;
+  const vec4 ORIGIN = vec4(0,0,0,1);
 
   uniform vec2 screenResolution;
   uniform vec3 cameraOrigin;
@@ -149,6 +150,15 @@
       }
   }
 
+  vec4 tiles[6];
+  void initTILES(){
+      tiles[0] = ORIGIN*translateByVector(vec3(2.0*TILE_SIZE, 0.0, 0.0)); //right
+      tiles[1] = ORIGIN*translateByVector(vec3(-2.0*TILE_SIZE,0.0, 0.0)); //left
+      tiles[2] = ORIGIN*translateByVector(vec3(0.0, 2.0*TILE_SIZE, 0.0)); //up
+      tiles[3] = ORIGIN*translateByVector(vec3(0.0,-2.0*TILE_SIZE, 0.0)); //down
+      tiles[4] = ORIGIN*translateByVector(vec3(0.0, 0.0, 2.0*TILE_SIZE)); //forward
+      tiles[5] = ORIGIN*translateByVector(vec3(0.0, 0.0,-2.0*TILE_SIZE)); //back
+  }
   //-------------------------------------------------------
 
   vec4 getRay(float fov, vec2 resolution, vec2 fragCoord){
@@ -172,25 +182,68 @@
   //Raymarch primitives
 
   float sphereHSDF(vec4 samplePoint, vec3 eTranslate){
-    return hypDistance(vec4(0,0,0,1)*translateByVector(eTranslate), samplePoint) - 0.05;
+    return hypDistance(ORIGIN*translateByVector(eTranslate), samplePoint) - 0.05;
   }
 
   float sceneHSDF(vec4 samplePoint){
-    float final = unionSDF(sphereHSDF(samplePoint, vec3(0.1,0.0,0.5)), sphereHSDF(samplePoint, vec3(-0.1,0.0,0.5)));
+    float final = sphereHSDF(samplePoint, vec3(0.0,0.0,0.2));
     return final;
   }
   //-------------------------------------------------------
-  /*bool isOutsideCell(vec4 rayOrigin){
-
+  int isOutsideCell(vec4 samplePoint){
+    float newDist = hypDistance(ORIGIN, samplePoint);
+    float bestDist = newDist;
+    int r = -1;
+    for(int i = 0; i<6; i++){
+      newDist = hypDistance(tiles[i], samplePoint);
+      if(newDist<bestDist){
+        bestDist = newDist;
+        r = i;
+      }
+    }
+    return r;
   }
-  vec4 fixOutsideCentralCell(vec4 rayOrigin, out vec4 tiling){
 
-  }*/
+  vec4 fixOutsideCentralCell(vec4 samplePoint, int tileIndex, out vec4 tiling){
+    vec4 r = samplePoint;
+    if(tileIndex == 0){ //right
+        r *= translateByVector(vec3(-2.0*TILE_SIZE,0.0, 0.0));
+        tiling += vec4(1.0,0.0,0.0,0.0);
+    }
+    else if(tileIndex == 1){ //left
+        r *= translateByVector(vec3(2.0*TILE_SIZE,0.0, 0.0));
+        tiling += vec4(-1.0,0.0,0.0,0.0);
+    }
+    else if(tileIndex == 2){ //up
+        r *= translateByVector(vec3(0.0, -2.0*TILE_SIZE, 0.0));
+        tiling += vec4(0.0,1.0,0.0,0.0);
+    }
+    else if(tileIndex == 3){ //down
+        r *= translateByVector(vec3(0.0, 2.0*TILE_SIZE, 0.0));
+        tiling += vec4(0.0,-1.0,0.0,0.0);
+    }
+    else if(tileIndex == 4){ //forward
+        r *= translateByVector(vec3(0.0, 0.0, -2.0*TILE_SIZE));
+        tiling += vec4(0.0,0.0,1.0,0.0);
+    }
+    else if(tileIndex == 5){ //back
+        r *= translateByVector(vec3(0.0, 0.0, 2.0*TILE_SIZE));
+        tiling += vec4(0.0,0.0,-1.0,0.0);
+    }
+    else{
+      return r;
+    }
+  }
 
   float shortestDistanceToSurface(vec4 rO, vec4 rD, float start, float end, out vec4 tiling){
     float depth = start;
+    int outsideCell = -1;
     for(int i = 0; i< MAX_MARCHING_STEPS; i++){
       vec4 samplePoint = rO*cosh(depth)+rD*sinh(depth);
+        outsideCell = isOutsideCell(samplePoint);
+        if(outsideCell > -1){
+          samplePoint = fixOutsideCentralCell(samplePoint, outsideCell, tiling);
+        }
       float dist = sceneHSDF(samplePoint);
       if(dist < EPSILON){
         return depth;
@@ -199,9 +252,9 @@
       if(depth >= end){
         return end;
       }
-    }
-    return end;
   }
+  return end;
+}
 
  //COLORING FUNCTIONS ++++++++++++++++++++++++++++++++++++++++++++++++++++
  vec3 estimateNormal(vec4 p) {
@@ -214,6 +267,7 @@
  //+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
   void main(){
+    initTILES();
     vec4 tiling;
     vec4 rayOrigin = projectToHyperboloid(vec4(0.0,0.0,0.0,1.0));
     rayOrigin *= translateByVector(cameraOffset);
@@ -230,11 +284,10 @@
       gl_FragColor = vec4(rayDirV.x,rayDirV.y,rayDirV.z,1.0);
       return;
     }
-    //float depthColor = 1.0-dist/1.0;
-    //gl_FragColor = vec4(depthColor,depthColor,depthColor,1.0);
+    float depthColor = 1.0-dist/0.8;
     vec4 p = rayOrigin*cosh(dist)+rayDirV*sinh(dist);
     vec3 color = estimateNormal(p);
-    gl_FragColor = vec4(color,1.0);
+    gl_FragColor = vec4(depthColor*color,1.0);
   }
 </script>
 
