--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 </script>
 
 <script type="x-shader/x-fragment" id="fragmentShader">
-  const int MAX_MARCHING_STEPS = 255;
+  const int MAX_MARCHING_STEPS = 63;
   const float MIN_DIST = 0.0;
-  const float MAX_DIST = 100.0;
+  const float MAX_DIST = 10.0;
   const float EPSILON = 0.0001;
-  const float TILE_SIZE = 0.2;
+  const float TILE_SIZE = 0.6584789;
   const vec4 ORIGIN = vec4(0,0,0,1);
 
   uniform vec2 screenResolution;
@@ -113,9 +113,9 @@
   	return sqrt(abs(lorentzDot(v,v)));
   }
 
-  vec4 vFromVPrime(vec4 u, vec4 vPrime){
-    vec4 v = vPrime - lorentzDot(u, vPrime)*u;
-    return (1.0/hypNorm(v)*v);
+  vec4 vPrimeFromV(vec4 u, vec4 v){
+    vec4 w = v - lorentzDot(u, v)*u;
+    return (1.0/hypNorm(w)*w);
   }
 
   float hypDistance(vec4 u, vec4 v){
@@ -149,15 +149,30 @@
         return mat4(1.0) + c1 * m + c2 * m2;
       }
   }
-
+  //generators is tiles without ORIGIN*
+  mat4 generators[6];
+  mat4 invGenerators[6];
+  void initGENS(){
+    generators[0] = translateByVector(vec3(2.0*TILE_SIZE, 0.0, 0.0)); //right
+    generators[1] = translateByVector(vec3(-2.0*TILE_SIZE,0.0, 0.0)); //left
+    generators[2] = translateByVector(vec3(0.0, 2.0*TILE_SIZE, 0.0)); //up
+    generators[3] = translateByVector(vec3(0.0,-2.0*TILE_SIZE, 0.0)); //down
+    generators[4] = translateByVector(vec3(0.0, 0.0, 2.0*TILE_SIZE)); //forward
+    generators[5] = translateByVector(vec3(0.0, 0.0,-2.0*TILE_SIZE)); //back
+  }
+  void initInvGENS(){
+    invGenerators[1] = generators[0]; //right
+    invGenerators[0] = generators[1]; //left
+    invGenerators[3] = generators[2]; //up
+    invGenerators[2] = generators[3]; //down
+    invGenerators[5] = generators[4]; //forward
+    invGenerators[4] = generators[5]; //back
+  }
   vec4 tiles[6];
   void initTILES(){
-      tiles[0] = ORIGIN*translateByVector(vec3(2.0*TILE_SIZE, 0.0, 0.0)); //right
-      tiles[1] = ORIGIN*translateByVector(vec3(-2.0*TILE_SIZE,0.0, 0.0)); //left
-      tiles[2] = ORIGIN*translateByVector(vec3(0.0, 2.0*TILE_SIZE, 0.0)); //up
-      tiles[3] = ORIGIN*translateByVector(vec3(0.0,-2.0*TILE_SIZE, 0.0)); //down
-      tiles[4] = ORIGIN*translateByVector(vec3(0.0, 0.0, 2.0*TILE_SIZE)); //forward
-      tiles[5] = ORIGIN*translateByVector(vec3(0.0, 0.0,-2.0*TILE_SIZE)); //back
+    for(int i=0; i<6; i++){
+      tiles[i] = ORIGIN*generators[i];
+    }
   }
   //-------------------------------------------------------
 
@@ -182,79 +197,59 @@
   //Raymarch primitives
 
   float sphereHSDF(vec4 samplePoint, vec3 eTranslate){
-    return hypDistance(ORIGIN*translateByVector(eTranslate), samplePoint) - 0.05;
+    return hypDistance(ORIGIN*translateByVector(eTranslate), samplePoint) - 0.3;
   }
 
   float sceneHSDF(vec4 samplePoint){
-    float final = sphereHSDF(samplePoint, vec3(0.0,0.0,0.2));
+    float final = sphereHSDF(samplePoint, vec3(0.0,0.0,0.0));
     return final;
   }
   //-------------------------------------------------------
-  int isOutsideCell(vec4 samplePoint){
+
+
+  bool isOutsideCell(vec4 samplePoint, out mat4 fixMatrix){
     float newDist = hypDistance(ORIGIN, samplePoint);
     float bestDist = newDist;
-    int r = -1;
+    bool r = false;
     for(int i = 0; i<6; i++){
       newDist = hypDistance(tiles[i], samplePoint);
       if(newDist<bestDist){
-        bestDist = newDist;
-        r = i;
+        bestDist = newDist; //break out early optimization
+        r = true;
+        fixMatrix = invGenerators[i];
       }
     }
     return r;
   }
 
-  vec4 fixOutsideCentralCell(vec4 samplePoint, int tileIndex, out vec4 tiling){
-    vec4 r = samplePoint;
-    if(tileIndex == 0){ //right
-        r *= translateByVector(vec3(-2.0*TILE_SIZE,0.0, 0.0));
-        tiling += vec4(1.0,0.0,0.0,0.0);
-    }
-    else if(tileIndex == 1){ //left
-        r *= translateByVector(vec3(2.0*TILE_SIZE,0.0, 0.0));
-        tiling += vec4(-1.0,0.0,0.0,0.0);
-    }
-    else if(tileIndex == 2){ //up
-        r *= translateByVector(vec3(0.0, -2.0*TILE_SIZE, 0.0));
-        tiling += vec4(0.0,1.0,0.0,0.0);
-    }
-    else if(tileIndex == 3){ //down
-        r *= translateByVector(vec3(0.0, 2.0*TILE_SIZE, 0.0));
-        tiling += vec4(0.0,-1.0,0.0,0.0);
-    }
-    else if(tileIndex == 4){ //forward
-        r *= translateByVector(vec3(0.0, 0.0, -2.0*TILE_SIZE));
-        tiling += vec4(0.0,0.0,1.0,0.0);
-    }
-    else if(tileIndex == 5){ //back
-        r *= translateByVector(vec3(0.0, 0.0, 2.0*TILE_SIZE));
-        tiling += vec4(0.0,0.0,-1.0,0.0);
-    }
-    else{
-      return r;
-    }
-  }
-
-  float shortestDistanceToSurface(vec4 rO, vec4 rD, float start, float end, out vec4 tiling){
-    float depth = start;
-    int outsideCell = -1;
+  float shortestDistanceToSurface(vec4 rO, vec4 rD, float start, float end, out float tiling){
+    float totalDepth = start;
+    float localDepth = totalDepth;
+    mat4 fixMatrix;
     for(int i = 0; i< MAX_MARCHING_STEPS; i++){
-      vec4 samplePoint = rO*cosh(depth)+rD*sinh(depth);
-        outsideCell = isOutsideCell(samplePoint);
-        if(outsideCell > -1){
-          samplePoint = fixOutsideCentralCell(samplePoint, outsideCell, tiling);
+      vec4 samplePoint = rO*cosh(localDepth)+rD*sinh(localDepth);
+      if(isOutsideCell(samplePoint, fixMatrix)){
+        tiling++;
+        vec4 newDirection = rO*cosh(localDepth+0.1) + rD*sinh(localDepth+0.1);
+        rO = samplePoint*fixMatrix;
+        newDirection *= fixMatrix;
+        rD = vPrimeFromV(rO,newDirection);
+        localDepth = start;
+      }
+      else{
+        float dist = sceneHSDF(samplePoint);
+        if(dist < EPSILON){
+          return totalDepth;
         }
-      float dist = sceneHSDF(samplePoint);
-      if(dist < EPSILON){
-        return depth;
+        totalDepth += dist;
+        localDepth += dist;
+        if(totalDepth >= end){
+          return end;
+        }
       }
-      depth += dist;
-      if(depth >= end){
-        return end;
-      }
+    }
+    return end;
   }
-  return end;
-}
 
  //COLORING FUNCTIONS ++++++++++++++++++++++++++++++++++++++++++++++++++++
  vec3 estimateNormal(vec4 p) {
@@ -267,27 +262,31 @@
  //+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
   void main(){
+    initGENS();
+    initInvGENS();
     initTILES();
-    vec4 tiling;
-    vec4 rayOrigin = projectToHyperboloid(vec4(0.0,0.0,0.0,1.0));
-    rayOrigin *= translateByVector(cameraOffset);
+    float tiling = 0.0;
+    vec3 initOffset = vec3(0.0,0.0,-0.5);
+    vec4 rayOrigin = vec4(0.0,0.0,0.0,1.0);
+    rayOrigin *= translateByVector(cameraOffset + initOffset);
     /*if(isOutsideCell(rayOrigin)){
       rayOrigin = fixOutsideCentralCell(rayOrigin, tiling);
     }*/
-    vec4 rayDirVPrime = getRay(90.0, screenResolution, gl_FragCoord.xy);
-    rayDirVPrime *= translateByVector(cameraOffset);
-    vec4 rayDirV = vFromVPrime(rayOrigin, rayDirVPrime);
+    vec4 rayDirV = getRay(90.0, screenResolution, gl_FragCoord.xy);
+    rayDirV *= translateByVector(cameraOffset + initOffset);
+    vec4 rayDirVPrime = vPrimeFromV(rayOrigin, rayDirV);
 
-    float dist = shortestDistanceToSurface(rayOrigin, rayDirV, MIN_DIST, MAX_DIST, tiling);
+    float dist = shortestDistanceToSurface(rayOrigin, rayDirVPrime, MIN_DIST, MAX_DIST, tiling);
     if(dist > MAX_DIST - EPSILON){
       //Didn't hit anything
-      gl_FragColor = vec4(rayDirV.x,rayDirV.y,rayDirV.z,1.0);
+      gl_FragColor = vec4(rayDirVPrime.x,rayDirVPrime.y,rayDirVPrime.z,1.0);
       return;
     }
-    float depthColor = 1.0-dist/0.8;
+    float depthColor = 1.0-dist/5.0;
+    float tilingColor = 1.0-tiling/5.0;
     vec4 p = rayOrigin*cosh(dist)+rayDirV*sinh(dist);
     vec3 color = estimateNormal(p);
-    gl_FragColor = vec4(depthColor*color,1.0);
+    gl_FragColor = vec4(depthColor,depthColor,0.0,1.0);
   }
 </script>
 
